Fix buggy padding on small screens

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ dt {
 }
 
 .site-frame {
-    width: 1024px;
+    width: 1200px;
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -103,18 +103,7 @@ header img {
 }
 
 main {
-    padding: 2rem 0;
-
-    /*background-color: #fafafa;
-    -webkit-box-shadow: inset 0 0 3px 0 rgba(0,0,0,.2);
-    -moz-box-shadow: inset 0 0 3px 0 rgba(0,0,0,.2);
-    box-shadow: inset 0 0 3px 0 rgba(0,0,0,.2);*/
-
-    /*
-    background-image: url('images/bg.png');
-    background-repeat: no-repeat;
-    background-position: -20% 10%;
-    */
+    padding: 2rem 1rem;
 }
 
 main p {
